--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@uniswap/v2-core": "1.0.0",
     "core-js": "^3.6.5",
     "ethers": "^5.6.1",
     "mixin-node-sdk": "3.0.22",
     "naive-ui": "^2.26.4",
     "qrious": "^4.0.2",
+    "quorum-uniswap-sdk": "^1.0.1",
     "vue": "^3.0.0",
     "web3modal": "^1.9.5"
   },
